--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="sk.alex_katona.todo_app.flow.todo_list.TodoList"
+        android:name="sk.alex_katona.todo_app.flow.todo_list.TodoListFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
