--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".flow.todo_list.TodoListFragment">
+    tools:context=".mvvm.todo_list.TodoListFragment">
 
     <TextView
         android:id="@+id/textview_first"
@@ -20,7 +20,7 @@
         android:id="@+id/button_navigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="navigate"
+        android:text="switch to mvi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
